<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_zipcode"
        android:inputType="number"
        android:key="@string/key_zipcode"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/label_zipcode" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/default_temperature_option"
        android:entries="@array/temperature_scale_titles"
        android:entryValues="@array/temperature_scale_options"
        android:key="@string/key_temperature"
        android:title="@string/temperature_scale" />

</PreferenceScreen>
